--- a/index.html
+++ b/index.html
@@ -245,8 +245,16 @@
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
-                            <h3>Dirección</h3>
+                            <h3>Sucursal Lima</h3>
                             <p>100m Este del Parque Central, Cartago, Costa Rica</p>
+                        </div>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <div>
+                            <h3>Sucursal San Rafael</h3>
+                            <p>San Rafael de Oreamuno, Cartago, Costa Rica</p>
+                            <p>Email: BMSP.CENTRODECARNES@GMAIL.COM</p>
                         </div>
                     </div>
                     <div class="contact-item">
