--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
 
             <div id="carnes" class="categoria-content active">
                 <div class="productos-grid">
-                    <!-- Example product card -->
+                    <!-- Carne de res -->
                     <div class="producto-card">
-                        <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Tilapia Fresca" class="producto-img">
+                        <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Bistec de Res" class="producto-img">
                         <span class="producto-tag">Fresco</span>
-                        <h3>Tilapia Fresca</h3>
-                        <p>Tilapia fresca de alta calidad</p>
-                        <div class="precio">₡2,500/kg</div>
+                        <h3>Bistec de Res</h3>
+                        <p>Bistec de res de primera calidad</p>
+                        <div class="precio">₡5,500/kg</div>
                         <div class="compra-options">
                             <select class="tipo-compra">
                                 <option value="peso">Por Peso (kg)</option>
@@ -98,34 +98,96 @@
                                 <span class="unidad">kg</span>
                             </div>
                             <div class="input-monto" style="display: none;">
-                                <input type="number" class="monto-input" value="2500" min="100" step="100">
+                                <input type="number" class="monto-input" value="5500" min="100" step="100">
                                 <span class="unidad">₡</span>
                             </div>
-                            <button class="btn-add-cart" data-id="1" data-nombre="Tilapia Fresca" data-precio="2500" data-unidad="kg">
+                            <button class="btn-add-cart" data-id="1" data-nombre="Bistec de Res" data-precio="5500" data-unidad="kg">
                                 Agregar al carrito
                             </button>
                         </div>
-                        <div class="product-actions">
-                            <div class="share-buttons">
-                                <a href="#" class="share-btn facebook" onclick="shareProduct('facebook', 'Tilapia Fresca')">
-                                    <i class="fab fa-facebook-f"></i>
-                                </a>
-                                <a href="#" class="share-btn whatsapp" onclick="shareProduct('whatsapp', 'Tilapia Fresca')">
-                                    <i class="fab fa-whatsapp"></i>
-                                </a>
-                                <a href="#" class="share-btn twitter" onclick="shareProduct('twitter', 'Tilapia Fresca')">
-                                    <i class="fab fa-twitter"></i>
-                                </a>
+                    </div>
+
+                    <!-- Chuleta de cerdo -->
+                    <div class="producto-card">
+                        <img src="https://images.pexels.com/photos/4110276/pexels-photo-4110276.jpeg" alt="Chuleta de Cerdo" class="producto-img">
+                        <span class="producto-tag">Fresco</span>
+                        <h3>Chuleta de Cerdo</h3>
+                        <p>Chuletas de cerdo frescas</p>
+                        <div class="precio">₡4,200/kg</div>
+                        <div class="compra-options">
+                            <select class="tipo-compra">
+                                <option value="peso">Por Peso (kg)</option>
+                                <option value="monto">Por Monto</option>
+                            </select>
+                            <div class="input-cantidad">
+                                <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
+                                <span class="unidad">kg</span>
                             </div>
+                            <div class="input-monto" style="display: none;">
+                                <input type="number" class="monto-input" value="4200" min="100" step="100">
+                                <span class="unidad">₡</span>
+                            </div>
+                            <button class="btn-add-cart" data-id="2" data-nombre="Chuleta de Cerdo" data-precio="4200" data-unidad="kg">
+                                Agregar al carrito
+                            </button>
+                        </div>
+                    </div>
+
+                    <!-- Pollo entero -->
+                    <div class="producto-card">
+                        <img src="https://images.pexels.com/photos/2338407/pexels-photo-2338407.jpeg" alt="Pollo Entero" class="producto-img">
+                        <span class="producto-tag">Fresco</span>
+                        <h3>Pollo Entero</h3>
+                        <p>Pollo entero fresco</p>
+                        <div class="precio">₡2,800/kg</div>
+                        <div class="compra-options">
+                            <select class="tipo-compra">
+                                <option value="peso">Por Peso (kg)</option>
+                                <option value="monto">Por Monto</option>
+                            </select>
+                            <div class="input-cantidad">
+                                <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
+                                <span class="unidad">kg</span>
+                            </div>
+                            <div class="input-monto" style="display: none;">
+                                <input type="number" class="monto-input" value="2800" min="100" step="100">
+                                <span class="unidad">₡</span>
+                            </div>
+                            <button class="btn-add-cart" data-id="3" data-nombre="Pollo Entero" data-precio="2800" data-unidad="kg">
+                                Agregar al carrito
+                            </button>
                         </div>
                     </div>
                 </div>
             </div>
 
             <div id="pescados" class="categoria-content">
-                <div class="categoria-placeholder">
-                    <i class="fas fa-fish"></i>
-                    <h3>Próximamente más productos</h3>
+                <div class="productos-grid">
+                    <!-- Tilapia -->
+                    <div class="producto-card">
+                        <img src="https://images.pexels.com/photos/3296434/pexels-photo-3296434.jpeg" alt="Tilapia Fresca" class="producto-img">
+                        <span class="producto-tag">Fresco</span>
+                        <h3>Tilapia Fresca</h3>
+                        <p>Tilapia fresca de alta calidad</p>
+                        <div class="precio">₡4,500/kg</div>
+                        <div class="compra-options">
+                            <select class="tipo-compra">
+                                <option value="peso">Por Peso (kg)</option>
+                                <option value="monto">Por Monto</option>
+                            </select>
+                            <div class="input-cantidad">
+                                <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
+                                <span class="unidad">kg</span>
+                            </div>
+                            <div class="input-monto" style="display: none;">
+                                <input type="number" class="monto-input" value="4500" min="100" step="100">
+                                <span class="unidad">₡</span>
+                            </div>
+                            <button class="btn-add-cart" data-id="4" data-nombre="Tilapia Fresca" data-precio="4500" data-unidad="kg">
+                                Agregar al carrito
+                            </button>
+                        </div>
+                    </div>
                 </div>
             </div>
 
@@ -151,15 +213,17 @@
                 <h3>BM Super Nelo</h3>
                 <p>Tu supermercado de confianza en Lima y San Rafael</p>
                 <div class="social-icons">
-                    <a href="#"><i class="fab fa-facebook"></i></a>
-                    <a href="#"><i class="fab fa-instagram"></i></a>
-                    <a href="#"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://facebook.com/bmsupernelo"><i class="fab fa-facebook"></i></a>
+                    <a href="https://instagram.com/bmsupernelo"><i class="fab fa-instagram"></i></a>
+                    <a href="https://wa.me/50688888888"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="footer-section">
                 <h4>Sucursales</h4>
-                <p>Lima: Tel. 2465-XXXX</p>
-                <p>San Rafael: Tel. 2465-XXXX</p>
+                <p>Lima: 300m Norte del Ebais</p>
+                <p>Tel: 2465-1234</p>
+                <p>San Rafael: Frente a la plaza</p>
+                <p>Tel: 2465-5678</p>
             </div>
             <div class="footer-section">
                 <h4>Horario</h4>
@@ -181,13 +245,13 @@
             <div class="sucursales-container">
                 <div class="sucursal-card" onclick="selectSucursal('Sucursal Lima')">
                     <h3>Lima</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Lima, Cartago</p>
-                    <p><i class="fas fa-phone"></i> 2465-XXXX</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 300m Norte del Ebais, Lima, Cartago</p>
+                    <p><i class="fas fa-phone"></i> 2465-1234</p>
                 </div>
                 <div class="sucursal-card" onclick="selectSucursal('Sucursal San Rafael')">
                     <h3>San Rafael</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> San Rafael, Cartago</p>
-                    <p><i class="fas fa-phone"></i> 2465-XXXX</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Frente a la plaza, San Rafael, Cartago</p>
+                    <p><i class="fas fa-phone"></i> 2465-5678</p>
                 </div>
             </div>
             <p class="modal-note">* Selecciona la sucursal donde deseas recoger tu pedido</p>
