Update website content

--- a/index.html
+++ b/index.html
@@ -75,19 +75,19 @@
             <div class="categorias-tabs">
                 <button class="categoria-tab active" data-categoria="carnes">Carnes</button>
                 <button class="categoria-tab" data-categoria="pescados">Pescados</button>
-                <button class="categoria-tab" data-categoria="verduras">Verduras</button>
-                <button class="categoria-tab" data-categoria="frutas">Frutas</button>
+                <button class="categoria-tab" data-categoria="embutidos">Embutidos</button>
+                <button class="categoria-tab" data-categoria="pollo">Pollo</button>
             </div>
 
             <div id="carnes" class="categoria-content active">
                 <div class="productos-grid">
-                    <!-- Carne de res -->
+                    <!-- Bistec -->
                     <div class="producto-card">
                         <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Bistec de Res" class="producto-img">
                         <span class="producto-tag">Fresco</span>
                         <h3>Bistec de Res</h3>
-                        <p>Bistec de res de primera calidad</p>
-                        <div class="precio">₡5,500/kg</div>
+                        <p>Bistec de res de primera calidad (arreglado y normal)</p>
+                        <div class="precio">₡5,990/kg</div>
                         <div class="compra-options">
                             <select class="tipo-compra">
                                 <option value="peso">Por Peso (kg)</option>
@@ -98,22 +98,22 @@
                                 <span class="unidad">kg</span>
                             </div>
                             <div class="input-monto" style="display: none;">
-                                <input type="number" class="monto-input" value="5500" min="100" step="100">
+                                <input type="number" class="monto-input" value="5990" min="100" step="100">
                                 <span class="unidad">₡</span>
                             </div>
-                            <button class="btn-add-cart" data-id="1" data-nombre="Bistec de Res" data-precio="5500" data-unidad="kg">
+                            <button class="btn-add-cart" data-id="1" data-nombre="Bistec de Res" data-precio="5990" data-unidad="kg">
                                 Agregar al carrito
                             </button>
                         </div>
                     </div>
 
-                    <!-- Chuleta de cerdo -->
+                    <!-- Cecina -->
                     <div class="producto-card">
-                        <img src="https://images.pexels.com/photos/4110276/pexels-photo-4110276.jpeg" alt="Chuleta de Cerdo" class="producto-img">
+                        <img src="https://images.pexels.com/photos/1927377/pexels-photo-1927377.jpeg" alt="Cecina" class="producto-img">
                         <span class="producto-tag">Fresco</span>
-                        <h3>Chuleta de Cerdo</h3>
-                        <p>Chuletas de cerdo frescas</p>
-                        <div class="precio">₡4,200/kg</div>
+                        <h3>Cecina</h3>
+                        <p>Cecina de res de primera calidad</p>
+                        <div class="precio">₡5,990/kg</div>
                         <div class="compra-options">
                             <select class="tipo-compra">
                                 <option value="peso">Por Peso (kg)</option>
@@ -124,22 +124,22 @@
                                 <span class="unidad">kg</span>
                             </div>
                             <div class="input-monto" style="display: none;">
-                                <input type="number" class="monto-input" value="4200" min="100" step="100">
+                                <input type="number" class="monto-input" value="5990" min="100" step="100">
                                 <span class="unidad">₡</span>
                             </div>
-                            <button class="btn-add-cart" data-id="2" data-nombre="Chuleta de Cerdo" data-precio="4200" data-unidad="kg">
+                            <button class="btn-add-cart" data-id="2" data-nombre="Cecina" data-precio="5990" data-unidad="kg">
                                 Agregar al carrito
                             </button>
                         </div>
                     </div>
 
-                    <!-- Pollo entero -->
+                    <!-- Costilla de res -->
                     <div class="producto-card">
-                        <img src="https://images.pexels.com/photos/2338407/pexels-photo-2338407.jpeg" alt="Pollo Entero" class="producto-img">
+                        <img src="https://images.pexels.com/photos/410648/pexels-photo-410648.jpeg" alt="Costilla de Res" class="producto-img">
                         <span class="producto-tag">Fresco</span>
-                        <h3>Pollo Entero</h3>
-                        <p>Pollo entero fresco</p>
-                        <div class="precio">₡2,800/kg</div>
+                        <h3>Costilla de Res</h3>
+                        <p>Costilla de res fresca</p>
+                        <div class="precio">₡4,000/kg</div>
                         <div class="compra-options">
                             <select class="tipo-compra">
                                 <option value="peso">Por Peso (kg)</option>
@@ -150,10 +150,10 @@
                                 <span class="unidad">kg</span>
                             </div>
                             <div class="input-monto" style="display: none;">
-                                <input type="number" class="monto-input" value="2800" min="100" step="100">
+                                <input type="number" class="monto-input" value="4000" min="100" step="100">
                                 <span class="unidad">₡</span>
                             </div>
-                            <button class="btn-add-cart" data-id="3" data-nombre="Pollo Entero" data-precio="2800" data-unidad="kg">
+                            <button class="btn-add-cart" data-id="3" data-nombre="Costilla de Res" data-precio="4000" data-unidad="kg">
                                 Agregar al carrito
                             </button>
                         </div>
@@ -169,7 +169,7 @@
                         <span class="producto-tag">Fresco</span>
                         <h3>Tilapia Fresca</h3>
                         <p>Tilapia fresca de alta calidad</p>
-                        <div class="precio">₡4,500/kg</div>
+                        <div class="precio">₡3,500/kg</div>
                         <div class="compra-options">
                             <select class="tipo-compra">
                                 <option value="peso">Por Peso (kg)</option>
@@ -180,10 +180,10 @@
                                 <span class="unidad">kg</span>
                             </div>
                             <div class="input-monto" style="display: none;">
-                                <input type="number" class="monto-input" value="4500" min="100" step="100">
+                                <input type="number" class="monto-input" value="3500" min="100" step="100">
                                 <span class="unidad">₡</span>
                             </div>
-                            <button class="btn-add-cart" data-id="4" data-nombre="Tilapia Fresca" data-precio="4500" data-unidad="kg">
+                            <button class="btn-add-cart" data-id="4" data-nombre="Tilapia Fresca" data-precio="3500" data-unidad="kg">
                                 Agregar al carrito
                             </button>
                         </div>
@@ -191,16 +191,16 @@
                 </div>
             </div>
 
-            <div id="verduras" class="categoria-content">
+            <div id="embutidos" class="categoria-content">
                 <div class="categoria-placeholder">
-                    <i class="fas fa-carrot"></i>
+                    <i class="fas fa-drumstick-bite"></i>
                     <h3>Próximamente más productos</h3>
                 </div>
             </div>
 
-            <div id="frutas" class="categoria-content">
+            <div id="pollo" class="categoria-content">
                 <div class="categoria-placeholder">
-                    <i class="fas fa-apple-alt"></i>
+                    <i class="fas fa-drumstick-bite"></i>
                     <h3>Próximamente más productos</h3>
                 </div>
             </div>
@@ -213,17 +213,18 @@
                 <h3>BM Super Nelo</h3>
                 <p>Tu supermercado de confianza en Lima y San Rafael</p>
                 <div class="social-icons">
-                    <a href="https://facebook.com/bmsupernelo"><i class="fab fa-facebook"></i></a>
-                    <a href="https://instagram.com/bmsupernelo"><i class="fab fa-instagram"></i></a>
-                    <a href="https://wa.me/50688888888"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.facebook.com/bmsupernelo" target="_blank"><i class="fab fa-facebook"></i></a>
+                    <a href="https://www.instagram.com/bm_supernelo" target="_blank"><i class="fab fa-instagram"></i></a>
+                    <a href="https://wa.me/50661914588" target="_blank"><i class="fab fa-whatsapp"></i></a>
                 </div>
             </div>
             <div class="footer-section">
                 <h4>Sucursales</h4>
-                <p>Lima: 300m Norte del Ebais</p>
-                <p>Tel: 2465-1234</p>
-                <p>San Rafael: Frente a la plaza</p>
-                <p>Tel: 2465-5678</p>
+                <p>Lima: 100mts este y 100norte de la plaza de deportes de la Lima de Cartago</p>
+                <p>Tel: 6191-4588</p>
+                <p>Email: BMSP.CENTRODECARNES@GMAIL.COM</p>
+                <p>San Rafael: costado norte de la plaza de deportes de Oreamuno de Cartago</p>
+                <p>Tel: 6143-7099</p>
             </div>
             <div class="footer-section">
                 <h4>Horario</h4>
@@ -245,13 +246,14 @@
             <div class="sucursales-container">
                 <div class="sucursal-card" onclick="selectSucursal('Sucursal Lima')">
                     <h3>Lima</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 300m Norte del Ebais, Lima, Cartago</p>
-                    <p><i class="fas fa-phone"></i> 2465-1234</p>
+                    <p><i class="fas fa-map-marker-alt"></i> 100mts este y 100norte de la plaza de deportes de la Lima de Cartago</p>
+                    <p><i class="fas fa-phone"></i> 6191-4588</p>
+                    <p><i class="fas fa-envelope"></i> BMSP.CENTRODECARNES@GMAIL.COM</p>
                 </div>
                 <div class="sucursal-card" onclick="selectSucursal('Sucursal San Rafael')">
                     <h3>San Rafael</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Frente a la plaza, San Rafael, Cartago</p>
-                    <p><i class="fas fa-phone"></i> 2465-5678</p>
+                    <p><i class="fas fa-map-marker-alt"></i> Costado norte de la plaza de deportes de Oreamuno de Cartago</p>
+                    <p><i class="fas fa-phone"></i> 6143-7099</p>
                 </div>
             </div>
             <p class="modal-note">* Selecciona la sucursal donde deseas recoger tu pedido</p>
