Fresh setup for BM Super Nelo

--- a/index.html
+++ b/index.html
@@ -73,235 +73,10 @@
         <section id="productos" class="productos-section">
             <h2 class="section-title">Nuestros Productos</h2>
             <div class="productos-grid">
-                <!-- Producto 1 -->
-                <div class="producto-card">
-                    <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Tilapia Fresca" class="producto-img">
-                    <span class="producto-tag">Fresco</span>
-                    <h3>Tilapia Fresca</h3>
-                    <p>Tilapia fresca de alta calidad</p>
-                    <div class="precio">₡2,500/kg</div>
-                    <div class="compra-options">
-                        <select class="tipo-compra">
-                            <option value="peso">Por Peso (kg)</option>
-                            <option value="monto">Por Monto</option>
-                        </select>
-                        <div class="input-cantidad">
-                            <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
-                            <span class="unidad">kg</span>
-                        </div>
-                        <div class="input-monto" style="display: none;">
-                            <input type="number" class="monto-input" value="2500" min="100" step="100">
-                            <span class="unidad">₡</span>
-                        </div>
-                        <button class="btn-add-cart" data-id="1" data-nombre="Tilapia Fresca" data-precio="2500" data-unidad="kg">
-                            Agregar al carrito
-                        </button>
-                    </div>
-                    <div class="product-actions">
-                        <div class="share-buttons">
-                            <a href="#" class="share-btn facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#" class="share-btn whatsapp">
-                                <i class="fab fa-whatsapp"></i>
-                            </a>
-                            <a href="#" class="share-btn twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Producto 2 -->
-                <div class="producto-card">
-                    <img src="https://images.pexels.com/photos/128401/pexels-photo-128401.jpeg" alt="Carne de Res" class="producto-img">
-                    <span class="producto-tag">Premium</span>
-                    <h3>Carne de Res</h3>
-                    <p>Corte premium de res</p>
-                    <div class="precio">₡5,500/kg</div>
-                    <div class="compra-options">
-                        <select class="tipo-compra">
-                            <option value="peso">Por Peso (kg)</option>
-                            <option value="monto">Por Monto</option>
-                        </select>
-                        <div class="input-cantidad">
-                            <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
-                            <span class="unidad">kg</span>
-                        </div>
-                        <div class="input-monto" style="display: none;">
-                            <input type="number" class="monto-input" value="5500" min="100" step="100">
-                            <span class="unidad">₡</span>
-                        </div>
-                        <button class="btn-add-cart" data-id="2" data-nombre="Carne de Res" data-precio="5500" data-unidad="kg">
-                            Agregar al carrito
-                        </button>
-                    </div>
-                    <div class="product-actions">
-                        <div class="share-buttons">
-                            <a href="#" class="share-btn facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#" class="share-btn whatsapp">
-                                <i class="fab fa-whatsapp"></i>
-                            </a>
-                            <a href="#" class="share-btn twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-
-                <!-- Producto 3 -->
-                <div class="producto-card">
-                    <img src="https://images.pexels.com/photos/1927377/pexels-photo-1927377.jpeg" alt="Pollo Entero" class="producto-img">
-                    <span class="producto-tag">Fresco</span>
-                    <h3>Pollo Entero</h3>
-                    <p>Pollo fresco limpio</p>
-                    <div class="precio">₡2,200/kg</div>
-                    <div class="compra-options">
-                        <select class="tipo-compra">
-                            <option value="peso">Por Peso (kg)</option>
-                            <option value="monto">Por Monto</option>
-                        </select>
-                        <div class="input-cantidad">
-                            <input type="number" class="cantidad-input" value="1" min="0.1" step="0.1">
-                            <span class="unidad">kg</span>
-                        </div>
-                        <div class="input-monto" style="display: none;">
-                            <input type="number" class="monto-input" value="2200" min="100" step="100">
-                            <span class="unidad">₡</span>
-                        </div>
-                        <button class="btn-add-cart" data-id="3" data-nombre="Pollo Entero" data-precio="2200" data-unidad="kg">
-                            Agregar al carrito
-                        </button>
-                    </div>
-                    <div class="product-actions">
-                        <div class="share-buttons">
-                            <a href="#" class="share-btn facebook">
-                                <i class="fab fa-facebook-f"></i>
-                            </a>
-                            <a href="#" class="share-btn whatsapp">
-                                <i class="fab fa-whatsapp"></i>
-                            </a>
-                            <a href="#" class="share-btn twitter">
-                                <i class="fab fa-twitter"></i>
-                            </a>
-                        </div>
-                    </div>
-                </div>
+                <!-- Productos se cargarán dinámicamente -->
             </div>
         </section>
     </main>
-
-    <!-- Modals -->
-    <div id="sucursalModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <img src="img/logo.png" alt="BM Super Nelo" class="logo-modal">
-            <h2>Selecciona tu Sucursal</h2>
-            <div class="sucursales-container">
-                <div class="sucursal-card" onclick="selectSucursal('Lima')">
-                    <h3>Lima</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> 100mts este y 100norte de la plaza de deportes de la Lima de Cartago</p>
-                    <p><i class="fas fa-phone"></i> 6191-4588</p>
-                </div>
-                <div class="sucursal-card" onclick="selectSucursal('San Rafael')">
-                    <h3>San Rafael</h3>
-                    <p><i class="fas fa-map-marker-alt"></i> Costado norte de la plaza de deportes de Oreamuno de Cartago</p>
-                    <p><i class="fas fa-phone"></i> 6143-7099</p>
-                </div>
-            </div>
-            <p class="modal-note">* Selecciona la sucursal donde deseas recoger tu pedido</p>
-        </div>
-    </div>
-
-    <div id="cartModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Carrito de Compras</h2>
-            <div id="cartEmpty" class="cart-empty">
-                <i class="fas fa-shopping-cart"></i>
-                <h3>Tu carrito está vacío</h3>
-                <p>Agrega productos para comenzar</p>
-            </div>
-            <div id="cartItems" class="cart-items"></div>
-            <div class="cart-summary">
-                <div class="cart-total">Total: <span id="cartTotal">₡0</span></div>
-                <button id="btnCheckout" class="btn-checkout" onclick="showCheckoutForm()">Proceder al pago</button>
-            </div>
-        </div>
-    </div>
-
-    <div id="checkoutModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <h2>Finalizar Compra</h2>
-            <form id="checkoutForm">
-                <div class="checkout-section">
-                    <h3>Información de Contacto</h3>
-                    <div class="form-group">
-                        <label for="nombreCompleto">Nombre Completo</label>
-                        <input type="text" id="nombreCompleto" required>
-                    </div>
-                    <div class="form-group">
-                        <label for="telefono">Teléfono</label>
-                        <input type="tel" id="telefono" required>
-                    </div>
-                </div>
-
-                <div class="checkout-section">
-                    <h3>Información de Recogida</h3>
-                    <div class="form-row">
-                        <div class="form-group half">
-                            <label for="fechaRecogida">Fecha de Recogida</label>
-                            <input type="date" id="fechaRecogida" required>
-                        </div>
-                        <div class="form-group half">
-                            <label for="horaRecogida">Hora de Recogida</label>
-                            <select id="horaRecogida" required>
-                                <option value="">Seleccionar hora</option>
-                                <option value="09:00">9:00 AM</option>
-                                <option value="10:00">10:00 AM</option>
-                                <option value="11:00">11:00 AM</option>
-                                <option value="12:00">12:00 PM</option>
-                                <option value="13:00">1:00 PM</option>
-                                <option value="14:00">2:00 PM</option>
-                                <option value="15:00">3:00 PM</option>
-                                <option value="16:00">4:00 PM</option>
-                                <option value="17:00">5:00 PM</option>
-                            </select>
-                        </div>
-                    </div>
-                    <div class="form-group">
-                        <label for="notasAdicionales">Notas Adicionales</label>
-                        <textarea id="notasAdicionales" rows="3"></textarea>
-                        <small>Opcional: Agrega cualquier instrucción especial para tu pedido</small>
-                    </div>
-                </div>
-
-                <button type="submit" class="btn-submit" onclick="processOrder(event)">Confirmar Pedido</button>
-            </form>
-        </div>
-    </div>
-
-    <div id="confirmationModal" class="modal">
-        <div class="modal-content">
-            <span class="close">&times;</span>
-            <div class="confirmation-header">
-                <i class="fas fa-check-circle"></i>
-                <h2>¡Pedido Confirmado!</h2>
-                <p>Tu pedido ha sido procesado exitosamente</p>
-            </div>
-            <div class="order-details">
-                <h3>Resumen del Pedido</h3>
-                <div id="orderSummary"></div>
-                <div class="order-total">
-                    Total: <span id="orderTotal"></span>
-                </div>
-            </div>
-            <button class="btn-continue" onclick="finishOrder()">Continuar Comprando</button>
-        </div>
-    </div>
 
     <footer>
         <div class="footer-content">
@@ -320,7 +95,6 @@
                 <p>Tel: 6191-4588</p>
                 <p><strong>San Rafael:</strong> Costado norte de la plaza de deportes de Oreamuno de Cartago</p>
                 <p>Tel: 6143-7099</p>
-                <p>Email: BMSP.CENTRODECARNES@GMAIL.COM</p>
             </div>
             <div class="footer-section">
                 <h4>Horario</h4>
