--- a/index.html
+++ b/index.html
@@ -6,7 +6,6 @@
     <title>BM Super Nelo - Supermercado en Cartago</title>
     <meta name="description" content="Tu supermercado de confianza en Lima y San Rafael de Cartago. Productos frescos y de calidad con servicio de pedidos en línea.">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="icon" type="image/x-icon" href="img/favicon.ico">
 </head>
@@ -55,7 +54,6 @@
                 <div class="products-grid">
                     <!-- Carnes de Res -->
                     <div class="producto-card">
-                        <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Cecina" class="producto-img">
                         <h3>Cecina</h3>
                         <p>Cecina de res de primera calidad</p>
                         <div class="precio">₡5,990/kg</div>
@@ -78,10 +76,8 @@
                         </div>
                     </div>
 
-                    <!-- Repeat similar structure for other products -->
-                    <!-- Example for Molida -->
+                    <!-- Molida -->
                     <div class="producto-card">
-                        <img src="https://images.pexels.com/photos/618775/pexels-photo-618775.jpeg" alt="Molida" class="producto-img">
                         <h3>Molida</h3>
                         <p>Carne molida fresca</p>
                         <div class="precio">₡4,500/kg</div>
@@ -186,7 +182,6 @@
         </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/scripts.js"></script>
 </body>
 </html>
