--- a/index.html
+++ b/index.html
@@ -186,6 +186,67 @@
                     </div>
                 </div>
 
+                <div class="checkout-section">
+                    <h3>Información de Pago</h3>
+                    <div class="form-group">
+                        <label for="tipoTarjeta">Tipo de Tarjeta</label>
+                        <select id="tipoTarjeta" required>
+                            <option value="">Seleccionar tipo</option>
+                            <option value="visa">Visa</option>
+                            <option value="mastercard">Mastercard</option>
+                            <option value="amex">American Express</option>
+                        </select>
+                    </div>
+                    <div class="form-group">
+                        <label for="numeroTarjeta">Número de Tarjeta</label>
+                        <input type="text" id="numeroTarjeta" required maxlength="16" pattern="\d{16}" placeholder="1234 5678 9012 3456">
+                    </div>
+                    <div class="form-row">
+                        <div class="form-group half">
+                            <label for="nombreTarjeta">Nombre en la Tarjeta</label>
+                            <input type="text" id="nombreTarjeta" required>
+                        </div>
+                        <div class="form-group half">
+                            <label>Fecha de Expiración</label>
+                            <div class="expiry-inputs">
+                                <select id="expMonth" required>
+                                    <option value="">Mes</option>
+                                    <option value="01">01</option>
+                                    <option value="02">02</option>
+                                    <option value="03">03</option>
+                                    <option value="04">04</option>
+                                    <option value="05">05</option>
+                                    <option value="06">06</option>
+                                    <option value="07">07</option>
+                                    <option value="08">08</option>
+                                    <option value="09">09</option>
+                                    <option value="10">10</option>
+                                    <option value="11">11</option>
+                                    <option value="12">12</option>
+                                </select>
+                                <select id="expYear" required>
+                                    <option value="">Año</option>
+                                    <option value="2025">2025</option>
+                                    <option value="2026">2026</option>
+                                    <option value="2027">2027</option>
+                                    <option value="2028">2028</option>
+                                    <option value="2029">2029</option>
+                                </select>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <label for="cvv">CVV</label>
+                        <div class="cvv-container">
+                            <input type="text" id="cvv" required maxlength="4" pattern="\d{3,4}" placeholder="123">
+                            <div class="cvv-info">
+                                <i class="fas fa-question-circle"></i>
+                                <span class="tooltip">Código de seguridad de 3 o 4 dígitos ubicado en el reverso de tu tarjeta</span>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
                 <button type="submit" class="btn-submit">Confirmar Pedido</button>
             </form>
         </div>
